openmediavault (0.5.18) stable; urgency=low

  * Improve storage device handling in core framework.
  * Fire OMV_NOTIFY_EVENT notifications after module services has been
    started/stopped, e.g. 'org.openmediavault.module.service.nfs.stop'
    or 'org.openmediavault.module.service.samba.start'.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 28 Oct 2013 18:36:06 +0100

openmediavault (0.5.17) stable; urgency=low

  * Update locales.
  * Various improvements.
  * Display relative path in shared folder combobox.
  * Mantis 0000881: Can't delete self-signed SSL certificates.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 20 Oct 2013 22:25:53 +0200

openmediavault (0.5.16) stable; urgency=low

  * Update locales.
  * Various improvements.
  * Mantis 0000879: System-Logs are not using monitor-space. Increase displayed
    numbers of rows in a paging grid to 50.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 18 Oct 2013 12:10:04 +0200

openmediavault (0.5.15) stable; urgency=low

  * Add feature to enable/disable FTP transfer log.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 17 Oct 2013 12:25:23 +0200

openmediavault (0.5.14) stable; urgency=low

  * Update locales.
  * Increase PHP post_max_size option to 25MiB.
  * Improve OMV.grid.Panel class.
  * Mantis 0000868: Unable to display users list when using Winbind backend.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 11 Oct 2013 08:55:02 +0200

openmediavault (0.5.13) stable; urgency=low

  * Mantis 0000865: Allow entering a hostname/FQDN under
    System Logs -> Settings -> Host.
  * Mantis 0000866: Device 'ip6tnl0' not supported.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 02 Oct 2013 16:15:17 +0200

openmediavault (0.5.12) stable; urgency=low

  * Update locales.
  * Improve interface bonding RPC.
  * Adapt WebGUI code to Sencha ExtJS 4.2.2.
  * Mantis 0000857: Cant disable HDD write cache.
