@@ -4,6 +4,7 @@ openmediavault (0.5.18) stable; urgency=low
   * Fire OMV_NOTIFY_EVENT notifications after module services has been
     started/stopped, e.g. 'org.openmediavault.module.service.nfs.stop'
     or 'org.openmediavault.module.service.samba.start'.
+  * Remember the workspace tree panel state.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 28 Oct 2013 18:36:06 +0100
 
